agora da pra procurar por nome do evento e categoria

--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,9 +1,11 @@
 
 <div>
-  <div class="mapbox-events" style="width: 100%; height: 300px;"
-    data-controller="mapbox"
-    data-mapbox-markers-value="<%= @markers.to_json %>"
-    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="mapbox-events">
+    <div class="mapbox-box" style="width: 100%; height: 300px;"
+      data-controller="mapbox"
+      data-mapbox-markers-value="<%= @markers.to_json %>"
+      data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+    </div>
   </div>
   <% @events.each do |event| %>
     <div class="courses-container">
