Posts controller ok

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -1,4 +1,4 @@
-<div>
-  <h2>PUBLIQUE UM POST SOBRE O EVENTO</h2>
-  <%= render 'post_form', post: @post %>
-</div>
+<%= render 'post_form' %>
+  
+ 
+
