--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,12 +1,25 @@
 <div class="container mt-2">
   <h1><%= @event.name %></h1>
-  <%= link_to "editar", edit_event_path, class: "btn btn-warning" %>
-  <%= link_to "cancelar", event_path, method: :delete, data: {confirm: 'Você tem certeza?'}, class: "btn btn-danger" %>
+  <%#= link_to "editar", edit_event_path(@event), class: "btn btn-warning" %>
+  <%#= link_to "cancelar", event_path, method: :delete, data: {confirm: 'Você tem certeza?'}, class: "btn btn-danger" %>
 
 </div>
+<h2> Diga algo sobre o evento </h2>
+<%= render 'posts/post_form' %>
+
+<h2>Posts</h2>
+<ul>
+  <% @posts.each do |post| %>
+    <li>
+      <%= post.content %>
+      <%#= link_to 'remove', events_path(@event), method: :delete, data: {confirm: 'Are you sure?'} %>
+    </li>
+  <% end %>
+</ul>
 
 <div style="width: 100%; height: 600px;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
   data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
 </div>
+
