--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -2,7 +2,11 @@
   <h1><%= @event.name %></h1>
   <%= link_to "editar", edit_event_path, class: "btn btn-warning" %>
   <%= link_to "cancelar", event_path, method: :delete, data: {confirm: 'Você tem certeza?'}, class: "btn btn-danger" %>
-
+  <% if @check_in.where(event_id: params[:id]).present? %>
+    <div class="btn btn-success"> Presença Confirmada </div>
+  <% else %>
+    <%= link_to "confirmar presença", event_check_ins_path(@event), method: :post, data: {confirm: "Confirmar presença no #{@event.name}?"}, class: "btn btn-success" %>
+  <% end %>
 </div>
 
 <div style="width: 100%; height: 600px;"
