--- a/app/views/events/index.html.erb
+++ b/app/views/events/index.html.erb
@@ -1,4 +1,3 @@
-
 <div>
   <div class="mapbox-events" style="width: 100%; height: 300px;"
     data-controller="mapbox"
@@ -7,29 +6,29 @@
   </div>
   <% @events.each do |event| %>
     <div class="courses-container">
-	    <div class="course">
-		    <div class="course-preview">
-			    <h6><%= event.category %></h6>
-			    <%= cl_image_tag event.photo.key, class: 'rounded ms-3', height: 100, width: 100, crop: :fill %>
+      <div class="course">
+        <div class="course-preview">
+          <h6><%= event.category %></h6>
+          <%= cl_image_tag event.photo.key, class: 'rounded ms-3', height: 100, width: 100, crop: :fill %>
           <%= link_to event_path(event), class: 'text-decoration-none' do %>
             <div class="more-info-button">
               <p>SAIBA MAIS <i class="fas fa-chevron-right"></i></p>
             </div>
           <% end %>
-		    </div>
-		    <div class="course-info">
-			    <div class="progress-container">
-				      <span class="progress-text">
-				      	X PESSOAS VÃO COMPARECER
-				      </span>
-			      </div>
-			      <h6><%= event.date %></h6>
-			      <h2><%= event.name %></h2>
-            <%= link_to event_path(event), class: 'text-decoration-none text-dark' do %>
-			        <button class="btn-event">VER</button>
-            <% end %>
-		      </div>
-	      </div>
+        </div>
+        <div class="course-info">
+          <div class="progress-container">
+            <span class="progress-text">
+              <%= %> X pessoas vão comparecer
+            </span>
+          </div>
+          <h6><%= event.date %></h6>
+          <h2><%= event.name %></h2>
+          <%= link_to event_path(event), class: 'text-decoration-none text-dark' do %>
+            <button class="btn-event">VER</button>
+          <% end %>
+        </div>
+      </div>
     </div>
   <% end %>
   <%= link_to "Novo evento", new_event_path, class: "btn-event text-decoration-none text-white" %>
