--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -1,5 +1,11 @@
-<div class="container mt-2">
-  <h1><%= @event.name %></h1>
+<div class="mapbox-events">
+  <div class="mapbox-box" style="width: 100%; height: 300px;"
+    data-controller="mapbox"
+    data-mapbox-markers-value="<%= @markers.to_json %>"
+    data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
+<div class="mapbox-events">
   <%= link_to "editar", edit_event_path, class: "btn btn-warning" %>
   <%= link_to "cancelar", event_path, method: :delete, data: {confirm: 'Você tem certeza?'}, class: "btn btn-danger" %>
   <% if @check_in.where(event_id: params[:id]).present? %>
@@ -9,22 +15,34 @@
   <% end %>
 
 </div>
-<h2> Diga algo sobre o evento </h2>
+
+
+
 <%= render 'posts/post_form' %>
+  <% @posts.reverse_each do |post| %>
+    <div class="post">
+  <div class="post-avatar">
+    <%= cl_image_tag current_user.photo.key %>
+  </div>
 
-<h2>Posts</h2>
-<ul>
-  <% @posts.each do |post| %>
-    <li>
-      <%= post.content %>
-      <%#= link_to 'remove', events_path(@event), method: :delete, data: {confirm: 'Are you sure?'} %>
-    </li>
-  <% end %>
-</ul>
-
-<div style="width: 100%; height: 600px;"
-  data-controller="mapbox"
-  data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  <div class="post-body">
+    <div class="post-header">
+      <div class="post-header-text">
+        <h3>
+          Djez
+          <span class="post-header-special"
+            ><span class="material-icons post-badge"> verified </span>@djez</span
+          >
+        </h3>
+      </div>
+      <div class="post-header-description">
+        <p><%= post.content %></p>
+      </div>
+    </div>
+    <%# <img
+      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
+      alt=""
+    /> %>
+  </div>
 </div>
-
+  <% end %>
