--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -25,6 +25,6 @@
 <div style="width: 100%; height: 600px;"
   data-controller="mapbox"
   data-mapbox-markers-value="<%= @markers.to_json %>"
-  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  data-mapbox-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>"
+  data-mapbox-user-location-value="false">
 </div>
-
