--- a/app/views/posts/_post_form.html.erb
+++ b/app/views/posts/_post_form.html.erb
@@ -2,7 +2,7 @@
   <div class="publish-box-input">
     <%= cl_image_tag current_user.photo.key %>
     <%= simple_form_for [@event, @post] do |f| %>
-        <%= f.input :content, label: false, input_html: {class: 'ps-3 text-holder'} %>
+        <%= f.input :content, label: false, placeholder: 'Escreva algo sobre o evento', input_html: {class: 'ps-3 text-holder'} %>
   </div>
         <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post' %>
     <% end %>
