--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -267,6 +267,11 @@ body {
   font-weight: 800;
 }
 
+.widget-image {
+  width: 200px;
+  height: 200px;
+}
+
 .profile-info {
   display: flex;
   justify-content: space-between;
