--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -29,9 +29,9 @@
     <div class="post-header">
       <div class="post-header-text">
         <h3>
-          Djez
+          <%= @user.first_name %>
           <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@djez</span
+            ><span class="material-icons post-badge"> verified </span>@<%= @user.username %></span
           >
         </h3>
       </div>
