--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -1,3 +1,4 @@
+<% if @widget == 'home' %>
     <div class="widgets">
       <div class="widgets-input">
         <span class="material-icons widgets-search-icon pe-3"> search </span>
@@ -11,17 +12,8 @@
       </div>
       <div class="widgets-widget-container">
         <h2>Próximos Eventos</h2>
-        <blockquote>
-          <p>Evento 1</p>
-          <p>Evento 2</p>
-        </blockquote>
-        <% if current_user %>
-          <%= simple_form_for current_user, url: update_address_path, method: :patch do |f| %>
-            <%= f.input :address,
-              input_html: { data: { geocoder_target: "address" }, class: "d-none" },
-              wrapper_html: { data: { controller: "geocoder", geocoder_api_key_value: ENV['MAPBOX_API_KEY'] } } %>
-            <%= f.submit 'Enviar' %>
-          <% end %>
+        <% @check_ins.reverse_each do |ci| %>
+          <p><%= ci.event.name %></p>
         <% end %>
         <div style="width: 100%; height: 300px;"
           data-controller="mapbox"
@@ -30,3 +22,45 @@
         </div>
       </div>
     </div>
+<% elsif @widget == 'events' %>
+    <div class="widgets">
+      <div class="widgets-input">
+        <span class="material-icons widgets-search-icon pe-3"> search </span>
+        <%= form_tag events_path, method: :get do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Procure um Evento"
+          %>
+        <% end %>
+      </div>
+      <div class="widgets-widget-container">
+        <h2>Próximos Eventos</h2>
+        <% @check_ins.reverse_each do |ci| %>
+          <p><%= ci.event.name %></p>
+        <% end %>
+
+      </div>
+    </div>
+<% elsif @widget == 'event' %>
+    <div class="widgets">
+      <div class="widgets-input">
+        <span class="material-icons widgets-search-icon pe-3"> search </span>
+        <%= form_tag events_path, method: :get do %>
+          <%= text_field_tag :query,
+            params[:query],
+            class: "form-control",
+            placeholder: "Procure um Evento"
+          %>
+        <% end %>
+      </div>
+      <div class="widgets-widget-container">
+        <h2><%= @event.name %></h2>
+        <p><%= @event.description %></p>
+        <%= cl_image_tag @event.photo.key, class: 'widget-image' %>
+        <p><%= @event.address%></p>
+        <p>Data: <%=@event.date %></p>
+
+      </div>
+    </div>
+<% end %>
