--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -13,36 +13,31 @@
   <% else %>
     <%= link_to "confirmar presença", event_check_ins_path(@event), method: :post, data: {confirm: "Confirmar presença no #{@event.name}?"}, class: "btn btn-success" %>
   <% end %>
-
 </div>
 
 
 
 <%= render 'posts/post_form' %>
-  <% @posts.reverse_each do |post| %>
-    <div class="post">
-  <div class="post-avatar">
-    <%= cl_image_tag current_user.photo.key %>
-  </div>
+<% @posts.reverse_each do |post| %>
+  <div class="post">
+    <div class="post-avatar">
+      <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
+    </div>
 
-  <div class="post-body">
-    <div class="post-header">
-      <div class="post-header-text">
-        <h3>
-          <%= @user.first_name %>
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@<%= @user.username %></span
-          >
-        </h3>
-      </div>
-      <div class="post-header-description">
-        <p><%= post.content %></p>
+    <div class="post-body">
+      <div class="post-header">
+        <div class="post-header-text">
+          <h3>
+            <%= User.where(id: post.user_id).first.first_name %>
+            <span class="post-header-special"
+              ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %></span
+            >
+          </h3>
+        </div>
+        <div class="post-header-description">
+          <p><%= post.content %></p>
+        </div>
       </div>
     </div>
-    <%# <img
-      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
-      alt=""
-    /> %>
   </div>
-</div>
-  <% end %>
+<% end %>
