--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,126 +11,27 @@
 </div>
 
 
-<!-- post 1 -->
-<div class="post">
-  <div class="post-avatar">
-    <img
-      src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
-      alt=""
-    />
-  </div>
+<% @posts.reverse_each do |post| %>
+  <div class="post">
+    <div class="post-avatar">
+      <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
+    </div>
 
-  <div class="post-body">
-    <div class="post-header">
-      <div class="post-header-text">
-        <h3>
-          Djez
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@djez</span
-          >
-        </h3>
-      </div>
-      <div class="post-header-description">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+    <div class="post-body">
+      <div class="post-header">
+        <div class="post-header-text">
+          <h3>
+            <%= User.where(id: post.user_id).first.first_name %>
+            <span class="post-header-special"
+              ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %></span
+            >
+          </h3>
+        </div>
+        <div class="post-header-description">
+          <p><%= post.content %></p>
+          <p>Publicado no evento: <%= post.event.name %></p>
+        </div>
       </div>
     </div>
-    <img
-      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
-      alt=""
-    />
   </div>
-</div>
-
-
-<!-- post 2 -->
-<div class="post">
-  <div class="post-avatar">
-    <img
-      src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
-      alt=""
-    />
-  </div>
-
-  <div class="post-body">
-    <div class="post-header">
-      <div class="post-header-text">
-        <h3>
-          Gabriel
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@gabrielo</span
-          >
-        </h3>
-      </div>
-      <div class="post-header-description">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <img
-      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
-      alt=""
-    />
-
-  </div>
-</div>
-<!-- post 3 -->
-<div class="post">
-  <div class="post-avatar">
-    <img
-      src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
-      alt=""
-    />
-  </div>
-
-  <div class="post-body">
-    <div class="post-header">
-      <div class="post-header-text">
-        <h3>
-          Ícaro
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@icaroleon</span
-          >
-        </h3>
-      </div>
-      <div class="post-header-description">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <img
-      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
-      alt=""
-    />
-
-  </div>
-</div>
-
-<!-- post 2 -->
-<div class="post">
-  <div class="post-avatar">
-    <img
-      src="https://i.pinimg.com/originals/a6/58/32/a65832155622ac173337874f02b218fb.png"
-      alt=""
-    />
-  </div>
-
-  <div class="post-body">
-    <div class="post-header">
-      <div class="post-header-text">
-        <h3>
-          Gabriel
-          <span class="post-header-special"
-            ><span class="material-icons post-badge"> verified </span>@gabrielo</span
-          >
-        </h3>
-      </div>
-      <div class="post-header-description">
-        <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
-      </div>
-    </div>
-    <img
-      src="https://www.focus2move.com/wp-content/uploads/2020/01/Tesla-Roadster-2020-1024-03.jpg"
-      alt=""
-    />
-
-  </div>
-</div>
-</div>
+<% end %>
