--- a/app/assets/stylesheets/components/_sidebar.scss
+++ b/app/assets/stylesheets/components/_sidebar.scss
@@ -2,6 +2,9 @@
  text-align: center;
  margin-bottom: 0px;
 }
+.dropdown-toggle::after{
+  display:none;
+}
 
 .dropdown-menu {
   border-radius: 4px;
@@ -9,17 +12,19 @@
   bottom: 100%;
   position: bottom;
 
- 
-
   .dropdown-item{
     display: inline-block;
   }
   
-  #edit-profile-item{
+  #edit-profile-text{
     text-align: left;
-    padding-right: 20px;
-    display: inline-block;
     vertical-align: middle;
+    font-size: 15px;
+  }
+
+  .icons-dropdown{
+    font-size: 15px;
+    padding-left: 60px;
   }
 
 
@@ -28,5 +33,11 @@
 .dropdown-icon {
   padding: 20px;
   font-size: 20px;
+  display: inline;
+}
+
+.teste {
+  color: red;
+  align-items: center;
   display: inline;
 }
