--- a/app/views/shared/_sidebar.html.erb
+++ b/app/views/shared/_sidebar.html.erb
@@ -32,7 +32,7 @@
       <h2>Criar Evento</h2>
     </div>
   <% end %>
-  <div class="dropup">
+  <div class="dropdown">
     <div class="sidebar-option dropdown-toggle" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
       <div class="profile-info">
         <div class="post-avatar align-middle">
@@ -41,19 +41,24 @@
         <div>
           <p class="username align-middle">@<%= current_user.username %></p>
         </div>
-      </div>
       <div class="option-icon">
         <span class="fas fa-caret-down mt-3 dropdown-icon"> </span>
+      </div>
       </div>
     </div>
     <ul class="dropdown-menu dropdown-menu-end position-absolute nav-item" aria-labelledby="dropdownMenuButton1">
       <%= link_to "Meus eventos", "#", class: "dropdown-item" %>
       <%= link_to "Eventos que irei", check_ins_path, class: "dropdown-item" %>
-      
-        <%= link_to "Editar profile", edit_user_registration_path, class: "dropdown-item", id: "edit-profile-item" %>
-        <%#<i class="fas fa-external-link-alt icon-external"></i>%>
-       
-      <%= link_to "Sair", destroy_user_session_path, method: :delete, class: "dropdown-item" %>
+      <div class="d-flex">
+        <%= link_to edit_user_registration_path, class: "dropdown-item flex-grow-1" do %>
+          Editar profile<i class="fas fa-external-link-alt icons-dropdown"></i>
+        <%end%>
+      </div>
+      <div class="d-flex">
+        <%= link_to destroy_user_session_path, method: :delete, class: "dropdown-item flex-grow-1 border-top pb-0", style: "--bs-border-opacity: .5" do %>
+        Log out<i class="fa-solid fa-right-from-bracket icons-dropdown"></i>
+        <%end%>
+      </div>
     </ul>
   </div>
 </div>
