--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -15,6 +15,12 @@
         <% @check_ins.reverse_each do |ci| %>
           <p><%= ci.event.name %></p>
         <% end %>
+
+              <p>confirmados</p>
+                <% @check_ins.each do |ci| %>
+          <p><%= ci.user_id %></p>
+        <% end %>
+
         <div style="width: 100%; height: 300px;"
           data-controller="mapbox"
           data-mapbox-markers-value="<%= @markers.to_json %>"
@@ -41,6 +47,12 @@
           <p><%= ci.event.name %></p>
         <% end %>
 
+
+              <p>confirmados</p>
+                <% @check_ins.each do |ci| %>
+          <p><%= ci.user_id %></p>
+        <% end %>
+
       </div>
     </div>
 <% elsif @widget == 'event' %>
@@ -59,8 +71,18 @@
         <h2><%= @event.name %></h2>
         <p><%= @event.description %></p>
         <%= cl_image_tag @event.photo.key, class: 'widget-image' %>
-        <p><%= @event.address%></p>
-        <p>Data: <%=@event.date %></p>
+        <p>Endereço: <%= @event.address.titleize%></p>
+        <p>Data: <%=@event.date.strftime("%a, %d %b %Y") %></p>
+        <h2>Próximos Eventos</h2>
+
+
+        <p>Confirmados</p>
+        <% @check_in.each do |ci| %>
+          <p><%= "#{ci.event.user.first_name} #{ci.event.user.id}" %></p>
+
+
+          <%# if event_id == @check_in.user_id %>
+        <% end %>
 
       </div>
     </div>
