--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -34,6 +34,9 @@
         </div>
         <div class="post-header-description">
           <p><%= post.content %></p>
+          <% post.photos.each do |photo| %>
+            <%= cl_image_tag photo.key%>
+          <% end %>
         </div>
       </div>
     </div>
