--- a/app/views/shared/_feed_header.html.erb
+++ b/app/views/shared/_feed_header.html.erb
@@ -4,6 +4,6 @@
       <%= 'Eventos' if @feed_header == 'events' %>
       <%= 'Home' if @feed_header == 'home' %>
       <%= 'Criar Evento' if @feed_header == 'new' %>
-      <%= @event.name if @feed_header == 'show' %>
+      <%= @event.name.titleize if @feed_header == 'show' %>
     </h2>
   </div>
