--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,8 +11,8 @@
 </div>
 
 
-<% @posts.reverse_each do |post| %>
-  <div class="post">
+<% @posts.each_with_index do |post, index| %>
+  <div class="<%= index.even? ? 'post-even' : 'post-odd' %>">
     <div class="post-avatar">
       <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
     </div>
@@ -29,7 +29,7 @@
         </div>
         <div class="post-header-description">
           <p><%= post.content %></p>
-          <p>Publicado no evento: <%= post.event.name %></p>
+          <p class = "published-event">publicado no evento: <%= post.event.name.downcase %>, <%= post.created_at.strftime('%a %d %b %Y').downcase %>.</p>
         </div>
       </div>
     </div>
