adicionei as fotos na home e fiz outros ajustes no botao de upload  por exemplo

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -17,6 +17,7 @@
       <%= cl_image_tag User.where(id: post.user_id).first.photo.key %>
     </div>
 
+
     <div class="post-body">
       <div class="post-header">
         <div class="post-header-text">
@@ -28,7 +29,17 @@
           </h3>
         </div>
         <div class="post-header-description">
-          <p><%= post.content %></p>
+          <%if post.photos.present?%>
+            <p><%= post.content %></p>
+            <% post.photos.each do |photo| %>
+              <%= cl_image_tag photo.key%>
+            <% end %>
+          <% else %>
+            <p class="mb-2"><%= post.content %></p>
+            <% post.photos.each do |photo| %>
+              <%= cl_image_tag photo.key%>
+            <% end %>
+          <% end %>
           <p class = "published-event">publicado no evento: <%= post.event.name.downcase %>, <%= post.created_at.strftime('%a %d %b %Y').downcase %>.</p>
         </div>
       </div>
