--- a/app/assets/stylesheets/components/_home_page.scss
+++ b/app/assets/stylesheets/components/_home_page.scss
@@ -128,6 +128,7 @@ body {
 .publish-box-input {
   display: flex;
   padding: 20px;
+  padding-bottom: 0px;
 }
 
 .publish-box-input input {
@@ -164,6 +165,28 @@ body {
   margin-top: -10px;
   margin-left: 500px;
   margin-bottom: 10px;
+}
+
+.image-upload {
+  margin-left: 32px;
+  color: #7C3E66;
+  width: fit-content;
+  border: solid 5px #F2EBE9;
+}
+
+.image-upload:hover {
+  color: white;
+  background-color: #763961;
+  border: solid 5px #763961;
+  border-radius: 5px;
+}
+
+#upload-text {
+  color: black;
+}
+
+#upload-text:hover {
+  color: white;
 }
 
 // .form-control {
