--- a/app/views/shared/_feed_header.html.erb
+++ b/app/views/shared/_feed_header.html.erb
@@ -5,5 +5,6 @@
       <%= 'Home' if @feed_header == 'home' %>
       <%= 'Criar Evento' if @feed_header == 'new' %>
       <%= @event.name.titleize if @feed_header == 'show' %>
+      <%#= "Editar User" if @feed_header == 'editar' %>
     </h2>
   </div>
