--- a/app/views/shared/_widgets.html.erb
+++ b/app/views/shared/_widgets.html.erb
@@ -64,13 +64,30 @@
       <% @check_ins.each do |ci| %>
         <%= cl_image_tag ci.user.photo.key, class: "avatar-large image#{i}", alt: "#{ci.user.first_name.titleize}", "data-bs-toggle" => "tooltip", "data-bs-placement" =>"top", title: "#{ci.user.first_name.titleize}" %>
         <% i += 1 %>
+        <%= break if i == 5 %>
       <% end %>
       <p>
-        <% @check_ins.each do |c| %>
-          <%= c.user.first_name.titleize %>,
+        <% if @event.check_ins.count > 1 %>
+          <% x = 0 %>
+          <% @check_ins.first(3).each do |c| %>
+            <%= c.user.first_name.titleize %>,
+            <% x += 1 %>
+          <% end %>
+          <%= "e outros confirmaram" if @check_ins.count < 3 && @check_ins.count > 0 %>
+          <%= "e outros #{@event.check_ins.count - 3} confirmaram" if @check_ins.count > 3  %>
+        <% elsif @event.check_ins.count == 1 %>
+          <%= @check_ins.first.user.first_name.titleize %>
+          <%= "confirmou" if @check_ins.count == 1  %>
         <% end %>
-        <%= "e outros confirmaram" if @check_ins.present? %>
       </p>
+      <div class="mapbox-events">
+        <% if @check_in.where(event_id: params[:id]).present? %>
+          <div class="btn btn-success"> Presença Confirmada </div>
+          <%= link_to "cancelar presença", event_check_in_path(@event), method: :delete, data: {confirm: "Cancelar presença no #{@event.name}?"}, class: "btn btn-warning" %>
+        <% else %>
+          <%= link_to "confirmar presença", event_check_ins_path(@event), method: :post, data: {confirm: "Confirmar presença no #{@event.name}?"}, class: "btn btn-success" %>
+        <% end %>
+      </div>
     </div>
   </div>
 <% end %>
