em andamento, amanha vou por stile no select

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,9 +1,7 @@
 // Specific CSS for your home-page
 
 .feed-arrow {
-  color: white;
-  border: 1px black;
-  text-shadow: 0 0 3px #FF0000, 0 0 5px #0000FF;
+  color: black;
 }
 
 .event-name {
