--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,15 +1,20 @@
 
 <!-- publishbox  -->
-<div class="publish-box">
-  <form>
-    <div class="publish-box-input">
-      <div class="post-avatar ">
-        <%= cl_image_tag current_user.photo.key %>
-      </div>
-      <input class="ps-3 text-holder" type="text" placeholder="O que você está fazendo?" />
-    </div>
-    <button class="publish-box-publish-button">POSTAR</button>
-  </form>
+<div class="publish-box w-100">
+  <div class="publish-box-input">
+
+    <%= cl_image_tag current_user.photo.key %>
+    <%= simple_form_for @post do |f| %>
+      <%= f.input :content, label: false, placeholder: 'Escreva algo sobre o evento', input_html: {class: 'ps-3 text-holder'} %>
+      <label class="material-icons image-upload d-flex align-items-center">
+        image
+        <%= f.input :photos, label: false, as: :file, input_html: { multiple: true, class: "d-none" }%>
+        <h6 class="m-0 ps-1" id="upload-text">Foto/Imagem</h6>
+      </label>
+      <%= f.association :event, selected: '', collection: @check_in_event %>
+  </div>
+      <%= f.submit 'POSTAR', class: 'publish-box-publish-button-post' %>
+    <% end %>
 </div>
 
 
@@ -24,15 +29,15 @@
           <h3>
             <%= User.where(id: post.user_id).first.first_name %>
             <span class="post-header-special"
-              ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %> 
-              <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i> 
+              ><span class="material-icons post-badge"> verified </span>@<%= User.where(id: post.user_id).first.username %>
+              <i class="fas fa-chevron-right feed-arrow"></i><i class="fas fa-chevron-right feed-arrow"></i>
               <span class = "event-name"> <%= post.event.name.downcase %> </span> </span
             >
-            
+
           </h3>
         </div>
         <div class="post-header-description">
-          <p><%= post.content %></p>          
+          <p><%= post.content %></p>
           <% if post.photos.attached? %>
             <% if post.photos.count > 1 %>
               <div id="carousel<%=post.id%>" class="carousel slide" data-bs-ride="carousel">
@@ -41,7 +46,7 @@
                     <div class="carousel-item <%='active' if index == 0%>" data-bs-interval="5000">
                       <%= cl_image_tag photo.key, height: 400, width: 400, crop: :fill %>
                     </div>
-                  <% end %> 
+                  <% end %>
                   <button class="carousel-control-prev" type="button" data-bs-target="#carousel<%=post.id%>" data-bs-slide="prev">
                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                     <span class="visually-hidden">Previous</span>
@@ -54,11 +59,11 @@
               </div>
             <%else%>
                 <%= cl_image_tag post.photos.first.key, class: "carousel-inner carousel-item active" %>
-            <% end %>   
+            <% end %>
           <% end %>
 
           <p class = "published-event">publicado em <%= post.created_at.strftime("%a, %d %b %Y").downcase %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
-          
+
         </div>
       </div>
     </div>
