--- a/app/views/chatrooms/index.html.erb
+++ b/app/views/chatrooms/index.html.erb
@@ -1,8 +1,7 @@
-<div class="container">
-<ul class = "d-flex flex-column" >
-  <% @chatrooms.each do |chatroom|%>
-   <li><%= link_to "#{chatroom.user.username} - #{chatroom.followed.username}", chatroom_path(chatroom) %></li>
-  <% end %>
-</ul>
-
+<div class="courses-container">
+  <ul class = "d-flex flex-column" >
+    <% @chatrooms.each do |chatroom|%>
+    <li><%= link_to "#{chatroom.user.username} - #{chatroom.followed.username}", chatroom_path(chatroom) %></li>
+    <% end %>
+  </ul>
 </div>
