data da home corrigida para pt-br

--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -62,7 +62,7 @@
             <% end %>
           <% end %>
 
-          <p class = "published-event">publicado em <%= post.created_at.strftime("%a, %d %b %Y").downcase %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
+          <p class = "published-event">publicado em <%= I18n.l(post.created_at, format: :long) %>, às <%= post.created_at.strftime("%H:%M").downcase %>.</p>
 
         </div>
       </div>
